<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/behavior_main_header">

        <com.example.codetest.helper.NestedLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="520dp"
                android:background="@mipmap/ic_launcher" />


        </com.example.codetest.helper.NestedLinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/behavior_xiami_title">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/xiami_title_height"
            android:layout_gravity="center_vertical"
            android:background="@mipmap/ic_launcher_round" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comment_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:overScrollMode="never"
        app:layout_behavior="@string/behavior_xiami_comment" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
